--- a/web/web/index.html
+++ b/web/web/index.html
@@ -6,8 +6,7 @@
   </head>
 
   <body>
-    <input />
-    <div id="root">Hello, PureScript!</div>
+    <div id="root"></div>
     <div id="main"></div>
     <script src="./index.js"></script>
   </body>
