--- a/web/web/index.html
+++ b/web/web/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Blaze UI</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
