--- a/server/res/html/poiset.html
+++ b/server/res/html/poiset.html
@@ -3,7 +3,7 @@
   <body>
     <h3>Set Global POI</h3>
     <p>Fill out this form:</p>
-    <form action="/poi" method="get">
+    <form action="/poi" method="put">
       <label for="binaryHash">Binary Hash:</label><br />
       <input type="text" id="binaryHash" name="binaryHash"><br />
       <label for="funcAddr">Function Addr:</label><br />
